# URSL

./: Cargo.toml  LICENSE  README.md  example.urcl  example.ursl  tictactoe.urcl  tictactoe.ursl
src/: common.rs  defs.rs  exts.rs  main.rs  mangle.rs  permutation.rs  prelude.ursl  urcl.rs  ursl.rs
